<resources>
    <!-- common, used in many places -->
    <string name="app_name">Work Orders Agro-Service</string>
    <string name="cancel_button">Cancel</string>
    <string name="clear_button">Clear</string>
    <string name="ok_button">Ок</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="partner_label">Client:</string>
    <string name="choose_label">...</string>
    <string name="car_label">Car:</string>
    <string name="department_label">Department:</string>
    <string name="line_number_label">Line No.:</string>
    <string name="search_label">Search</string>
    <string name="version">Version %1$s</string>
    <string name="clear_search_text_button">X</string>
    <string name="filter_fragment_title">Filter</string>
    <string name="try_again">Try again</string>

    <!-- WorkOrderFragment -->
    <string name="number_hint">Number</string>
    <string name="date_hint">Date</string>
    <string name="request_reason_hint">Request reason</string>
    <string name="comment_hint">Comment</string>
    <string name="email_hint">E-mail</string>
    <string name="mileage_hint">Mileage</string>

    <string name="error_input_number">Error! No number specified</string>
    <string name="error_input_performer">Error! No performer specified</string>
    <string name="error_specify_partner">Specify the client</string>
    <string name="error_duplicate_number">Error! This number is already taken</string>

    <string name="success_saved">Information saved</string>
    <string name="save_work_order_before">The work order has been changed. Before sending by e-mail, you must write down the work order.</string>
    <string name="can_not_send_work_order">This work order can only be sent by e-mail after Data Synchronization. In the list of work orders on the menu, select Synchronize Data.</string>

    <string name="save_button">Save</string>
    <string name="close_button">Close</string>

    <string name="send_to_email_label">Send work order to e-mail</string>
    <string name="repair_type_label">Repair type:</string>
    <string name="master_type_label">Master:</string>
    <string name="performer_details_label">Performers:</string>
    <string name="job_detals_label">Works:</string>
    <string name="date_label">Date:</string>

    <string name="job_detail_quantity">Quantity = %1$s</string>
    <string name="job_detail_line_number">No = %1$s</string>
    <string name="job_detail_sum">Sum = %1$s</string>
    <string name="job_detail_time_norm">Time norm = %1$s</string>
    <string name="job_detail_working_hour">Working hour = %1$s</string>

    <string name="edit_job_detail_not_selected">Job line not selected for editing.</string>
    <string name="delete_job_detail_not_selected">Job line not selected for deletion.</string>

    <string name="edit_performer_detail_not_selected">There is no performer selected for editing.</string>
    <string name="delete_performer_detail_not_selected">There is no performer selected for deletion.</string>

    <string name="data_was_changed_question">The data has been changed. Save changes?</string>
    <string name="delete_job_detail_question">Delete line of works?</string>
    <string name="delete_performer_detail_question">Delete line of performers?</string>

    <string name="fill_in_email">Enter an email address.</string>
    <string name="wrong_email">Email address is incorrect.</string>

    <string name="add_default_jobs_question">For the selected Repair type and the selected Car, there are jobs that need to be performed. Add jobs to Jobs list?</string>

    <!-- WorkOrderListFragment -->
    <string name="add_work_order_fab_description">Add work order</string>
    <string name="exit_from_app_question">Do you want to exit the %1$s?</string>

    <string name="search_menu_item">Search</string>
    <string name="synchronize_data_menu_item">Synchronize data</string>
    <string name="settings_menu_item">Settings</string>
    <string name="about_menu_item">About</string>
    <string name="exit_menu_item">Exit</string>

    <string name="about_application">%1$s \n \n Version %2$s</string>
    <string name="under_constraction">Under construction.</string>

    <string name="total_sum_label">Total:</string>
    <string name="contains">contains</string>

    <string name="partner_hint">Client</string>
    <string name="car_hint">Car</string>
    <string name="performer_hint">Performer</string>
    <string name="department_hint">Department</string>
    <string name="date_from_hint">Date from</string>
    <string name="date_to_hint">Date to</string>

    <string name="work_order_list_no_data">There is no data</string>

    <!-- LoginFragment -->
    <string name="server_hint">Server</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>

    <string name="enter">Enter</string>
    <string name="cancel">Cancel</string>

    <string name="error_input_server">Specify server</string>
    <string name="error_input_login">Specify user</string>
    <string name="error_input_password">Enter a password</string>

    <!-- DataSynchronizationFragment -->
    <string name="exit_button">Exit</string>
    <string name="synchro_data_label">Data synchronization</string>

    <string name="success_synchronization">Data synchronization completed successfully.</string>
    <string name="success_autonomus">The data has not been synchronized, but you can continue working offline.</string>
    <string name="fail_synchronization">The data has not been synchronized, but you can continue working offline.</string>

    <string name="success_upload_work_orders">Work orders have been successfully uploaded to the 1C server (%1$s)</string>
    <string name="no_work_orders_to_upload">There are no work orders to be uploaded to the 1C server.</string>

    <!-- SendWorkOrderByIdToEmailDialogFragment -->
    <string name="send_to_email_caption_label">Sending an order by e-mail</string>
    <string name="wait">Wait...</string>
    <string name="fail_send_work_order">An error occurred while sending:</string>
    <string name="success_send_work_order">Successfully sent</string>

    <!-- JobDetailFragment -->
    <string name="car_job_label">Work:</string>
    <string name="working_hour_label">Working hour:</string>
    <string name="quantity_label">Quantity:</string>
    <string name="time_norm_label">Time norm:</string>
    <string name="sum_label">Sum:</string>
    <string name="job_detail_title">Works</string>

    <string name="error_empty_working_hour">Error! The working hour is not filled.</string>
    <string name="error_empty_car_job">Error! The work is not filled.</string>

    <!-- PerformerDetailFragment -->
    <string name="performer_detail_title">Performers</string>
    <string name="employee_label">Performer:</string>
    <string name="error_empty_employee">Error! The performer is not filled.</string>

    <!-- PartnerPickerFragment -->
    <string name="partner_picker_title">Coose a client</string>

    <!-- CarJobPickerFragment -->
    <string name="car_job_picker_title">Select auto work</string>

    <!-- EmployeePickerFragment -->
    <string name="employee_picker_title">Choose an employee</string>

    <!-- WorkingHourPickerFragment -->
    <string name="working_fragment_picker_title">Choose a working hour</string>

    <!-- CarPickerFragment -->
    <string name="car_picker_title">Choose a car from %1$s</string>

    <!-- RepairTypePickerFragment -->
    <string name="repair_type_picker_title">Choose a repair type</string>

    <!-- DepartmentPickerFragment -->
    <string name="department_picker_title">Choose a department</string>

    <!-- SearchWorkOrderFragment -->
    <string name="number_label">Number:</string>
    <string name="performer_label">Performer:</string>
    <string name="date_from_label">Date from:</string>
    <string name="date_to_label">Date to:</string>

    <!-- unused -->
    <string name="work_order_presentation">Work order № %s dated %s</string>
    <string name="server">Server</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="error_network_wrong_server">It is impossible to connect to the 1C server, the server may be incorrectly specified.</string>
    <string name="fail_upload_work_orders">Error while uploading work orders:</string>
    <string name="search_button">Search</string>
    <string name="add_performers_button">Add</string>
    <string name="delete_performers_button">Delete</string>
    <string name="get_car_job_list">Obtaining a catalog of CarJobs from 1C</string>
    <string name="prepare_car_job_list">Processing a catalog of CarJobs</string>
    <string name="get_department_list">Obtaining a catalog of Departments from 1C</string>
    <string name="prepare_department_list">Processing a catalog of Departments</string>
    <string name="get_employee_list">Obtaining a catalog of Employees from 1C</string>
    <string name="prepare_employee_list">Processing a catalog of Employees</string>
    <string name="get_partner_list">Obtaining a catalog of Partners from 1C</string>
    <string name="prepare_partner_list">Processing a catalog of Partners</string>
    <string name="get_car_list">Obtaining a catalog of Cars from 1C</string>
    <string name="prepare_car_list">Processing a catalog of Cars</string>
    <string name="get_working_hour_list">Obtaining a catalog of Working hours from 1C</string>
    <string name="prepare_working_hour_list">Processing a catalog of Working hours</string>
    <string name="get_default_wo_settings_list">Getting filling settings from 1C</string>
    <string name="load_work_orders">Obtaining work-orders from 1C</string>
    <string name="upload_work_orders">Sending work-orders to 1C</string>
    <string name="load_repair_types">Obtaining a catalog of Repair types from 1C</string>
    <string name="get_car_model_list">Obtaining a catalog of Car Models from 1C</string>
    <string name="prepare_car_model_list">Processing a catalog of Car models</string>
</resources>
