<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_menu_item"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search_menu_item"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/synchronize_data_menu_item"
        android:title="@string/synchronize_data_menu_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/settings_menu_item"
        android:title="@string/settings_menu_item"
        app:showAsAction="never" />

    <item
        android:id="@+id/exit_menu_item"
        android:title="@string/exit_menu_item"
        app:showAsAction="never" />


</menu>